--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/fm.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>movieappfrontend</title>
+    <title>movies</title>
     <meta name="monetag" content="c70d284ffef654fa2691278488b19e38">
   </head>
   <body>
