tion bulk ones more logo added field added add date ok rdo

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/fm.png" />
+    <link rel="icon" type="image/jpg" href="/fm.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>movies</title>
+    <title>moviesfear</title>
     <meta name="monetag" content="c70d284ffef654fa2691278488b19e38">
   </head>
   <body>
