--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/fmg.jpg" />
+    <link rel="icon" type="image/png" href="/fmg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>moviesfear</title>
     <meta name="monetag" content="c70d284ffef654fa2691278488b19e38">
